# sdk-python

./: CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
docs/models/: availableformats.md  cdnurls.md  createpresetrequest.md  createpresetresponse.md  createsignedurlrequest.md  createsignedurlrequest1.md  createsignedurlresponse.md  currentperiod.md  deleteimagepathrequest.md  deleteimagepathresponse.md  deleteimagerequest.md  deleteimageresponse.md  deletepresetrequest.md  deletepresetresponse.md  deletepresetresponse1.md  deleteresponse.md  errordetail.md  fit.md  folderitem.md  format_.md  getimagerequest.md  getimageresponse.md  getpresetrequest.md  getpresetresponse.md  getsettingsresponse.md  getusageresponse.md  hateoaslinks.md  imagedimensions.md  imagelistitem.md  imagelistresponse.md  imagemetadata.md  listimagesrequest.md  listimagesresponse.md  listpresetsresponse.md  listpresetsresponse1.md  metadataresponse.md  pathdeleteresponse.md  planlimits.md  planstatus.md  preset.md  (+18 more)
docs/sdks/images/: README.md
docs/sdks/presets/: README.md
docs/sdks/settings/: README.md
docs/sdks/usage/: README.md
src/img_src/: _version.py  images.py  sdk.py
src/img_src/models/: availableformats.py  cdnurls.py  createsignedurlrequest.py
tests/: conftest.py  test_e2e.py  test_models.py
