[project]
name = "img-src"
version = "0.3.0"
description = "Official Python SDK for img-src.io - Developer-first image CDN"
authors = [{ name = "Taehun", email = "taehun@taehun.dev" }]
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "jsonpath-python >=1.1.4",
    "pydantic >=2.12.5",
]
license = { text = "MIT" }

[dependency-groups]
dev = [
    "mypy ==1.19.1",
    "pylint ==4.0.5; python_version >= '3.10'",
    "pyright ==1.1.408",
    "pytest >=9.0.2; python_version >= '3.10'",
    "pytest >=8.0.0; python_version < '3.10'",
    "pytest-asyncio >=1.3.0; python_version >= '3.10'",
    "pytest-asyncio >=0.24.0; python_version < '3.10'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


